Added new upgrades and print modes to printing press, closes #401