@@ -6,7 +6,6 @@ import blusunrize.immersiveengineering.common.util.inventory.IEInventoryHandler;
 import blusunrize.immersiveengineering.common.util.inventory.MultiFluidTank;
 import net.minecraft.entity.Entity;
 import net.minecraft.item.ItemStack;
-import net.minecraft.nbt.NBTBase;
 import net.minecraft.nbt.NBTTagCompound;
 import net.minecraft.util.EnumFacing;
 import net.minecraft.util.NonNullList;
@@ -19,6 +18,7 @@ import net.minecraftforge.fluids.capability.CapabilityFluidHandler;
 import net.minecraftforge.items.CapabilityItemHandler;
 import net.minecraftforge.items.IItemHandler;
 import pl.pabilo8.immersiveintelligence.api.crafting.PrintingRecipe;
+import pl.pabilo8.immersiveintelligence.api.crafting.PrintingRecipe.PrintFunction;
 import pl.pabilo8.immersiveintelligence.api.data.DataPacket;
 import pl.pabilo8.immersiveintelligence.api.data.IIDataHandlingUtils;
 import pl.pabilo8.immersiveintelligence.api.data.types.DataTypeInteger;
@@ -31,16 +31,15 @@ import pl.pabilo8.immersiveintelligence.common.entity.tactile.EntityAMTTactile;
 import pl.pabilo8.immersiveintelligence.common.entity.tactile.TactileManager;
 import pl.pabilo8.immersiveintelligence.common.entity.tactile.TactileManager.ITactileListener;
 import pl.pabilo8.immersiveintelligence.common.util.IIDamageSources;
+import pl.pabilo8.immersiveintelligence.common.util.easynbt.EasyCollection;
 import pl.pabilo8.immersiveintelligence.common.util.easynbt.EasyNBT;
 import pl.pabilo8.immersiveintelligence.common.util.easynbt.SyncNBT;
 import pl.pabilo8.immersiveintelligence.common.util.easynbt.SyncNBT.SyncEvents;
-import pl.pabilo8.immersiveintelligence.common.util.lambda.NBTTagCollector;
 import pl.pabilo8.immersiveintelligence.common.util.multiblock.production.TileEntityMultiblockProductionBase;
 import pl.pabilo8.immersiveintelligence.common.util.multiblock.production.TileEntityMultiblockProductionMulti;
 import pl.pabilo8.immersiveintelligence.common.util.multiblock.util.MultiblockPOI;
 
 import javax.annotation.Nullable;
-import java.util.ArrayDeque;
 
 /**
  * @author Pabilo8 (pabilo@iiteam.net)
@@ -61,7 +60,7 @@ public class TileEntityPrintingPress extends TileEntityMultiblockProductionMulti
 	private IItemHandler outputHandler = new IEInventoryHandler(1, this, SLOT_OUTPUT, true, true);
 	private TactileManager tactileManager = null;
 
-	private ArrayDeque<PrintingRequest> printRequestsQueue;
+	private EasyCollection<PrintingRequest, NBTTagCompound> printRequestsQueue;
 
 	public TileEntityPrintingPress()
 	{
@@ -69,7 +68,7 @@ public class TileEntityPrintingPress extends TileEntityMultiblockProductionMulti
 		this.tank = new MultiFluidTank(8000);
 		this.energyStorage = new FluxStorageAdvanced(PrintingPress.energyCapacity);
 		this.inventory = NonNullList.withSize(4, ItemStack.EMPTY);
-		this.printRequestsQueue = new ArrayDeque<>();
+		this.printRequestsQueue = new EasyCollection<>(PrintingRequest::new);
 	}
 
 	@Override
@@ -97,37 +96,6 @@ public class TileEntityPrintingPress extends TileEntityMultiblockProductionMulti
 						IIContent.fluidInkMagenta.equals(fs.getFluid())||
 						IIContent.fluidInkYellow.equals(fs.getFluid())))
 			forceTileUpdate();
-	}
-
-	//--- NBT Handling ---//
-
-	@Override
-	public void readCustomNBT(NBTTagCompound nbt, boolean descPacket)
-	{
-		super.readCustomNBT(nbt, descPacket);
-		if(isDummy())
-			return;
-
-		if(nbt.hasKey("print_queue"))
-		{
-			printRequestsQueue.clear();
-			for(NBTBase entry : nbt.getTagList("print_queue", EasyNBT.TAG_COMPOUND))
-				printRequestsQueue.add(new PrintingRequest((NBTTagCompound)entry));
-			printRequestsQueue.removeIf(printingRequest -> printingRequest.recipe==null);
-		}
-	}
-
-	@Override
-	public void writeCustomNBT(NBTTagCompound nbt, boolean descPacket)
-	{
-		super.writeCustomNBT(nbt, descPacket);
-		if(isDummy())
-			return;
-		EasyNBT.wrapNBT(nbt).withTag("print_queue",
-				printRequestsQueue.stream()
-						.map(PrintingRequest::serializeNBT)
-						.collect(new NBTTagCollector())
-		);
 	}
 
 
@@ -242,22 +210,23 @@ public class TileEntityPrintingPress extends TileEntityMultiblockProductionMulti
 		// Check for queued orders
 		if(printRequestsQueue.isEmpty())
 			return null;
-		PrintingRequest found = printRequestsQueue.getFirst();
-		if(found.amount-- <= 1)
-			printRequestsQueue.remove();
+		PrintingRequest found = printRequestsQueue.get(0);
 
-		if(!found.recipe.getInput().matchesItemStack(inputHandler.extractItem(SLOT_PAPER, 1, true)))
+		ItemStack input = inputHandler.extractItem(SLOT_PAPER, 1, true);
+		if(!found.recipe.getInput().matchesItemStack(input))
 			return null;
 
 		//Check if there's enough paper
-		PrintingProcess process = new PrintingProcess(found.recipe, found.data, inventory.get(SLOT_PAPER));
+		PrintFunction function = found.recipe.getFunction();
+		ItemStack result = function.apply(input, found.data);
+		int[] inkCost = function.getInkTypesRequired(found.data);
 
 		//Check if there's enough ink
 		FluidStack[] fs = {
-				new FluidStack(IIContent.fluidInkBlack, process.blackCost),
-				new FluidStack(IIContent.fluidInkCyan, process.cyanCost),
-				new FluidStack(IIContent.fluidInkMagenta, process.magentaCost),
-				new FluidStack(IIContent.fluidInkYellow, process.yellowCost)
+				new FluidStack(IIContent.fluidInkCyan, inkCost[0]),
+				new FluidStack(IIContent.fluidInkMagenta, inkCost[1]),
+				new FluidStack(IIContent.fluidInkYellow, inkCost[2]),
+				new FluidStack(IIContent.fluidInkBlack, inkCost[3])
 		};
 		for(FluidStack f : fs)
 			if(f.amount!=0&&!f.isFluidEqual(tank.drain(f, false)))
@@ -268,14 +237,22 @@ public class TileEntityPrintingPress extends TileEntityMultiblockProductionMulti
 		for(FluidStack f : fs)
 			tank.drain(f, true);
 
-		//Return process
-		return process;
+		//Decrease to-be-printed page amount, remove the task if all pages were printed
+		if(found.amount-- <= 1)
+			printRequestsQueue.remove(0);
+		//Return the process
+		return new IIMultiblockProcess<>(found.recipe)
+				.withNBT(nbt -> nbt.withItemStack("result", result)
+						.withInt("cyan", inkCost[0])
+						.withInt("magenta", inkCost[1])
+						.withInt("yellow", inkCost[2])
+						.withInt("black", inkCost[3]));
 	}
 
 	@Override
 	protected IIMultiblockProcess<PrintingRecipe> getProcessByName(String name)
 	{
-		return TileEntityMultiblockProductionBase.findRecipeFromList(PrintingRecipe.class, PrintingProcess::new, name);
+		return TileEntityMultiblockProductionBase.findRecipeFromList(PrintingRecipe.class, name);
 	}
 
 	@Override
@@ -291,10 +268,8 @@ public class TileEntityPrintingPress extends TileEntityMultiblockProductionMulti
 	@Override
 	protected boolean attemptProductionOutput(IIMultiblockProcess<PrintingRecipe> process)
 	{
-		assert process instanceof PrintingProcess;
-		PrintingProcess printingProcess = (PrintingProcess)process;
-
-		outputOrDrop(printingProcess.result.copy(), outputHandler, facing, getPOI("output"));
+		ItemStack result = process.processData.getItemStack("result");
+		outputOrDrop(result, outputHandler, facing, getPOI("output"));
 		return true;
 	}
 
@@ -389,9 +364,9 @@ public class TileEntityPrintingPress extends TileEntityMultiblockProductionMulti
 			this.amount = amount;
 		}
 
-		public PrintingRequest(NBTTagCompound tag)
+		public PrintingRequest()
 		{
-			this.deserializeNBT(tag);
+
 		}
 
 		@Override
@@ -414,58 +389,6 @@ public class TileEntityPrintingPress extends TileEntityMultiblockProductionMulti
 		}
 	}
 
-	//TODO: 28.08.2025 replace with the generic recipe
-
-	/**
-	 * An order for a page to be printed that's placed in the Printing Press' queue.
-	 */
-	@Deprecated
-	public static class PrintingProcess extends IIMultiblockProcess<PrintingRecipe>
-	{
-		int blackCost, cyanCost, magentaCost, yellowCost;
-		ItemStack result;
-
-		public PrintingProcess(PrintingRecipe recipe)
-		{
-			super(recipe);
-		}
-
-		public PrintingProcess(PrintingRecipe recipe, DataPacket packet, ItemStack input)
-		{
-			super(recipe);
-			this.result = recipe.getFunction().apply(input, packet);
-
-			int[] inks = recipe.getFunction().getInkTypesRequired(packet);
-			this.cyanCost = inks[0];
-			this.magentaCost = inks[1];
-			this.yellowCost = inks[2];
-			this.blackCost = inks[3];
-		}
-
-		@Override
-		public NBTTagCompound serializeNBT()
-		{
-			return EasyNBT.wrapNBT(super.serializeNBT())
-					.withItemStack("result", result)
-					.withInt("black", blackCost)
-					.withInt("cyan", cyanCost)
-					.withInt("magenta", magentaCost)
-					.withInt("yellow", yellowCost)
-					.unwrap();
-		}
-
-		@Override
-		public void deserializeNBT(NBTTagCompound nbt)
-		{
-			super.deserializeNBT(nbt);
-			EasyNBT enbt = EasyNBT.wrapNBT(nbt);
-
-			result = enbt.getItemStack("result");
-			blackCost = enbt.getInt("black");
-			cyanCost = enbt.getInt("cyan");
-			magentaCost = enbt.getInt("magenta");
-			yellowCost = enbt.getInt("yellow");
-		}
-	}
+	//this.result = recipe.getFunction().apply(input, packet);
 
 }
